login page css update and fix validation of form also fix alignment in header section of myacoount div structure

--- a/my-react-app/src/components/header/header.scss
+++ b/my-react-app/src/components/header/header.scss
@@ -34,4 +34,9 @@
             }
         }
     }
+    .myaccount{
+        display: flex;
+        justify-content: space-around;
+        width: 20%;
+    }
 }
