--- a/my-react-app/src/components/login-signup/LoginSignUp.styles.scss
+++ b/my-react-app/src/components/login-signup/LoginSignUp.styles.scss
@@ -3,9 +3,15 @@
     max-width: 75%;
     margin: 0 auto;
     text-align: center;
-    .login-buttons{
-        .facebook-button{
-            padding-bottom: 20px;
+    .row{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        .column{
+            width: 50%;
+            .facebook-button{
+                padding-bottom: 20px;
+            }
         }
     }
 }
